app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
        track: stable
        version: 1.0.0
    spec:
      containers:
        - name: hello
          image: "gcr.io/wh-host/hello:1.0.0"
          ports:
            - name: http
              containerPort: 80
          resources:
            limits:
              cpu: "200m"
              memory: 0.3G
            requests:
              cpu: "200m"
              memory: 0.3G
          readinessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
