svc.yaml

kind: Service
apiVersion: v1
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
  name: "hello"
  labels:
    app: "hello"
spec:
  selector:
    app: "hello"
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
  type: ClusterIP
