ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: gce
  name: hello-ingress
spec:
  backend:
    serviceName: hello
    servicePort: 80
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: hello
          servicePort: 80
